update struture folder and mock file
