# app/router/router.go
@@ -2,25 +2,25 @@ package router
 
 import (
 	"github.com/labstack/echo/v4"
-	http3 "github.com/nrmadi02/mini-project/enterprise/delivery/http"
-	repository4 "github.com/nrmadi02/mini-project/enterprise/repository"
-	usecase3 "github.com/nrmadi02/mini-project/enterprise/usecase"
-	http4 "github.com/nrmadi02/mini-project/favorite/delivery/http"
-	repository6 "github.com/nrmadi02/mini-project/favorite/repository"
-	usecase5 "github.com/nrmadi02/mini-project/favorite/usecase"
-	repository5 "github.com/nrmadi02/mini-project/rating/repository"
-	usecase4 "github.com/nrmadi02/mini-project/rating/usecase"
-	http5 "github.com/nrmadi02/mini-project/review/delivery/http"
-	repository7 "github.com/nrmadi02/mini-project/review/repository"
-	usecase6 "github.com/nrmadi02/mini-project/review/usecase"
-	repository2 "github.com/nrmadi02/mini-project/role/repository"
-	http2 "github.com/nrmadi02/mini-project/tag/delivery/http"
-	repository3 "github.com/nrmadi02/mini-project/tag/repository"
-	usecase2 "github.com/nrmadi02/mini-project/tag/usecase"
-	"github.com/nrmadi02/mini-project/user/delivery/http"
-	mid "github.com/nrmadi02/mini-project/user/delivery/http/middleware"
-	"github.com/nrmadi02/mini-project/user/repository"
-	"github.com/nrmadi02/mini-project/user/usecase"
+	http3 "github.com/nrmadi02/mini-project/internal/enterprise/delivery/http"
+	repository4 "github.com/nrmadi02/mini-project/internal/enterprise/repository"
+	usecase3 "github.com/nrmadi02/mini-project/internal/enterprise/usecase"
+	http4 "github.com/nrmadi02/mini-project/internal/favorite/delivery/http"
+	repository6 "github.com/nrmadi02/mini-project/internal/favorite/repository"
+	usecase5 "github.com/nrmadi02/mini-project/internal/favorite/usecase"
+	repository5 "github.com/nrmadi02/mini-project/internal/rating/repository"
+	usecase4 "github.com/nrmadi02/mini-project/internal/rating/usecase"
+	http5 "github.com/nrmadi02/mini-project/internal/review/delivery/http"
+	repository7 "github.com/nrmadi02/mini-project/internal/review/repository"
+	usecase6 "github.com/nrmadi02/mini-project/internal/review/usecase"
+	repository2 "github.com/nrmadi02/mini-project/internal/role/repository"
+	http2 "github.com/nrmadi02/mini-project/internal/tag/delivery/http"
+	repository3 "github.com/nrmadi02/mini-project/internal/tag/repository"
+	usecase2 "github.com/nrmadi02/mini-project/internal/tag/usecase"
+	http6 "github.com/nrmadi02/mini-project/internal/user/delivery/http"
+	mid "github.com/nrmadi02/mini-project/internal/user/delivery/http/middleware"
+	"github.com/nrmadi02/mini-project/internal/user/repository"
+	usecase7 "github.com/nrmadi02/mini-project/internal/user/usecase"
 	"gorm.io/gorm"
 )
 
@@ -35,17 +35,17 @@ func SetupRouter(c *echo.Echo, db *gorm.DB) {
 	favoriteRepository := repository6.NewFavoriteRepository(db)
 	reviewRepository := repository7.NewReviewRepository(db)
 
-	authUsecase := usecase.NewAuthUsecase(userRepository, roleRepository, favoriteRepository, enterpriseRepository)
-	userUsecase := usecase.NewUserUsecase(userRepository, authUsecase)
+	authUsecase := usecase7.NewAuthUsecase(userRepository, roleRepository, favoriteRepository, enterpriseRepository)
+	userUsecase := usecase7.NewUserUsecase(userRepository, authUsecase)
 	tagUsecase := usecase2.NewTagUsecase(tagRepository)
 	enterpriseUsecase := usecase3.NewEnterpriseUsecase(enterpriseRepository, tagRepository, userRepository)
 	ratingUsecase := usecase4.NewRatingUsecase(userRepository, enterpriseRepository, ratingRepository)
 	favoriteUsecase := usecase5.NewFavoriteUsecase(enterpriseRepository, favoriteRepository)
 	reviewUsecase := usecase6.NewReviewUsecase(enterpriseRepository, userRepository, reviewRepository)
 
-	authController := http.NewAuthController(authUsecase)
-	userController := http.NewUserController(authUsecase, ratingUsecase)
-	adminController := http.NewAdminController(authUsecase, userUsecase)
+	authController := http6.NewAuthController(authUsecase)
+	userController := http6.NewUserController(authUsecase, ratingUsecase)
+	adminController := http6.NewAdminController(authUsecase, userUsecase)
 	tagController := http2.NewTagController(authUsecase, tagUsecase)
 	enterpriseController := http3.NewEnterpriseController(authUsecase, enterpriseUsecase, ratingUsecase)
 	favoriteController := http4.NewFavoriteController(favoriteUsecase, authUsecase, ratingUsecase)
